--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,6 +7,11 @@
     box-sizing: border-box;
 }
 
+body {
+    font-family: 'PT Sans', sans-serif;
+    font-size: 1rem;
+}
+
 ul {
     list-style: none;
 }
@@ -22,11 +27,16 @@ button {
     border: none;
     outline: none;
     cursor: pointer;
+    font-size: 1rem;
 }
 
 img {
     display: block;
     width: 100%;
+}
+
+h5 {
+    font-size: 1.5rem;
 }
 
 /* Reset e normalizzazione */
@@ -134,6 +144,8 @@ header li button a {
 #demo .box {
     background-color: var(--lightblue);
     width: var(--larghezza);
+    padding: 0 1.625rem;
+    border-radius: 20px;
 }
 
 #demo .box.grande {
@@ -147,11 +159,41 @@ header li button a {
 #phone {
     display: flex;
     justify-content: center;
-    padding-top: 4.4375rem;
+    align-items: flex-end;
 }
 
 #phone img {
     width: 12.3125rem;
+}
+
+#demo .box h5 {
+    color: var(--blue);
+    margin-top: 2rem;
+}
+
+#demo .box.box.grande h5 {
+    margin-top: 2.3125rem;
+}
+
+#demo .box p {
+    color: #5a6e7f;
+    font-size: 1.125rem;
+    font-weight: bold;
+    line-height: 1.5;
+    margin: 2rem 0;
+}
+
+.box button {
+    background-color: var(--blue);
+    color: white;
+    padding: 1rem 3rem;
+    border-radius: 25px;
+    letter-spacing: .25rem;
+    font-weight: bold;
+}
+
+#demo .box button {
+    margin-bottom: 3.625rem;
 }
 
 /* Section demo */
@@ -305,7 +347,10 @@ footer {
     #phone {
         justify-content: flex-end;
         margin-right: 50%;
-        padding-top: 2.4375rem;
+    }
+
+    #demo .box button {
+        margin-bottom: 2.375rem;
     }
 
     /* Section demo */
